# django-search

./: .gitignore  README.md  fixtures.json  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: settings.py
backend/: pyproject.toml
backend/app/: urls.py
backend/core/: response.py  views.py
backend/search/: models.py  services.py  urls.py  views.py
backend/search/management/commands/: search_products.py
frontend/: package-lock.json  package.json
output/: results.csv
search/: apps.py  search.py  signals.py  urls.py  views.py
search/management/commands/: index_products.py  search_products.py
search/migrations/: 0001_initial.py  0002_product_slug.py  0003_product_search_document_product_search_index_dirty_and_more.py  0004_alter_product_options_product_search_document_idx_and_more.py
